# trace2flow-browser-memory

./: .env.example  .gitignore  CLAUDE.md  README.md  REFLECTION.md  pyproject.toml
.agents/skills/trace2flow-demo/: SKILL.md
.planning/: ROADMAP.md  STATE.md
.planning/phases/01-baseline-harness/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-workflow-memory-layer/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/quick/260425-24c-boundary-fix-remove-path-inference-from-/: 260425-24c-PLAN.md  260425-24c-SUMMARY.md
config/: project.yaml
docs/: findings.md  phase-01-baseline-runbook.md  test-run-report.md
docs/superpowers/plans/: 2026-04-25-browser-workflow-memory-v1.md
results/: eval_20_combined.json  eval_books.json  eval_kinostar.json  eval_mai.json  eval_quotes.json
scripts/: analyze_cumulative.py  check_artifact_schema.py  run_baseline_suite.py  run_eval_20.sh
skills/trace2flow/: SKILL.md
src/workflow_memory/: cli.py  config.py  db.py  models.py
tasks/: books_toscrape_eval.yaml  kinostar_eval.yaml  mai_schedule.yaml  mai_schedule_eval.yaml  quotes_toscrape_eval.yaml  recreation_gov.yaml
tests/: test_adapters.py  test_admission.py  test_artifact_schema.py  test_baseline_suite_smoke.py  test_cli_baseline.py  test_cli_smoke.py  test_config.py  test_eval_batch.py  test_fingerprints.py  test_loops.py  test_memory_run_pipeline.py  test_optimization_pass.py  test_optimize_pipeline.py  test_pipeline_baseline.py  test_retrieval.py  test_site_adapter_mai_schedule.py  test_storage.py  test_task_suite_loader.py  test_verification.py
(+22 files in other folders)
